--- a/pages/club.html
+++ b/pages/club.html
@@ -48,7 +48,7 @@
         <h1 class="mb-3 mt-3">Club</h1>
         <div class="col-12">
             <div class="">
-                <img src="../media/Plantel/plantelCompleto.jpg" class="col-12 col-md-6 float-end mb-2 ms-2 mb-md-3 ms-md-3 p-0 imagenClub" alt="...">
+                <img src="../media/Plantel/Equipo LN - Camiseta suplente (1) (1).jpg" class="col-12 col-md-6 float-end mb-2 ms-2 mb-md-3 ms-md-3 p-0 imagenClub" alt="...">
                 <p class="parrafoClub">
                   Un <b>9 de julio de 1914</b>, en la esquina de Maipú y Juramento, nacía Racing Club de Chivilcoy. Un grupo de jóvenes apasionados por Racing de Avellaneda, liderados por <b>Francisco Vachino</b>, dio el puntapié inicial a esta gran historia. Vachino fue el primer presidente, y hasta cedió una habitación de su casa para que ese sueño tomara forma.<br/><br/>
 
@@ -88,7 +88,7 @@
 
                   En 2006, <b>Racing adquiere un campo de deportes, se amplía la infraestructura y se realizan obras clave para modernizar sus instalaciones.</b><br/><br/>
                 </p>
-                <img src="../media/Plantel/cuerpoTecnico.jpg" class="col-12 col-md-6 float-start mb-2 me-2 mb-md-3 me-md-3 p-0 imagenClub" alt="...">
+                <img src="../media/Plantel/Equipo LN - Camiseta titular (2) (1).jpg" class="col-12 col-md-6 float-start mb-2 me-2 mb-md-3 me-md-3 p-0 imagenClub" alt="...">
                 <p class="parrafoClub">
                   En 2010, <b>un incendio destruye parte del Estadio Norte. Pero como tantas veces, el club se levanta con el apoyo de su gente y sigue adelante.</b><br/><br/>
 
