--- a/admin/backend.admin.html
+++ b/admin/backend.admin.html
@@ -31,6 +31,73 @@
       </h2>
       <h2 class="titulo">- Administrador</h2>
     </section>
+    <!-- Contador de Clicks WhatsApp -->
+    <section class="container-fluid my-3 p-0">
+      <div class="container my-5">
+        <h4 class="mb-4">Panel de Asociación</h4>
+
+        <div class="card text-center p-4 shadow-sm">
+          <h5>Contador de clicks a WhatsApp</h5>
+          <p id="contadorClicks" class="fs-3 fw-bold text-success mb-3">
+            Cargando...
+          </p>
+          <button id="verDetalles" class="btn btn-primary">Ver detalles</button>
+        </div>
+      </div>
+
+      <!-- Modal Bootstrap -->
+      <div
+        class="modal fade"
+        id="modalDetalles"
+        tabindex="-1"
+        aria-labelledby="modalDetallesLabel"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog modal-lg modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="modalDetallesLabel">
+                Detalles de clicks a WhatsApp
+              </h5>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+                aria-label="Cerrar"
+              ></button>
+            </div>
+            <div class="modal-body">
+              <div class="table-responsive">
+                <table class="table table-striped align-middle">
+                  <thead class="table-dark">
+                    <tr>
+                      <th>Número de click</th>
+                      <th>Nombre del usuario</th>
+                    </tr>
+                  </thead>
+                  <tbody id="tablaClicks">
+                    <tr>
+                      <td colspan="2" class="text-center text-muted">
+                        Cargando...
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button
+                type="button"
+                class="btn btn-secondary"
+                data-bs-dismiss="modal"
+              >
+                Cerrar
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- Próximos partidos - FireBase -->
     <section class="container-fluid my-3 p-0">
       <!--Próximos partidos - Actualizar-->
