--- a/pages/asociate.html
+++ b/pages/asociate.html
@@ -44,7 +44,8 @@
     </header>
     <main class="mainFormulario" id="mainFormulario">
         <section class="container-fluid d-flex flex-column align-items-center">
-            <h2 class="mt-3 mb-3">Asociate</h2>
+            <h2 class="my-3">Asociate</h2>
+            <h4 class="my-3">Completá el formulario</h4>
             <form id="contactForm" class="col-11 col-sm-8 col-md-6 col-lg-4 col-xl-3">
                 <label for="nombre" class="form-label mt-1">Nombre</label>
                 <input type="text" id="nombre" name="name" class="form-control" required />
@@ -63,6 +64,15 @@
                 </div>
             </form>
             <div id="status"></div>
+        </section>
+        <section class="container-fluid d-flex flex-column align-items-center">
+          <div class="form-group text-center col-11 col-sm-8 col-md-6 col-lg-4 col-xl-3 my-4">
+            <label for="nombreAsociar" class="form-label"><h4>O hacelo vía <strong id="textoWhtasApp">WhatsApp</strong></h4></label>
+            <input type="text" id="nombreAsociar" class="form-control mx-auto mb-1" placeholder="Ingresá tu nombre">
+            <button id="botonWhatsApp" class="btn btn-lg">Asociate por <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
+              <path d="M13.601 2.326A7.85 7.85 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.9 7.9 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.9 7.9 0 0 0 13.6 2.326zM7.994 14.521a6.6 6.6 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.56 6.56 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592m3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.73.73 0 0 0-.529.247c-.182.198-.691.677-.691 1.654s.71 1.916.81 2.049c.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232"/>
+            </svg> WhatsApp</button>
+          </div>
         </section>
     </main>
     <footer>
@@ -198,6 +208,9 @@
         emailjs.init("S-tLBA6nNufGB2SDP");
       })();
     </script>
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-firestore-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-storage-compat.js"></script>
     <script src="../js/formulario.js"></script>
   </body>
 </html>
