--- a/pages/asociate.html
+++ b/pages/asociate.html
@@ -33,6 +33,7 @@
               <a class="nav-link fs-4" href="../index.html">Inicio</a>
               <a class="nav-link fs-4" href="./club.html">Club</a>
               <a class="nav-link fs-4" href="./noticias.html">Noticias</a>
+              <a class="nav-link fs-4" href="./iniciacion.html">Iniciación al Basquet</a>
               <a class="nav-link fs-4" href="./estadios.html">Estadios</a>
               <a class="nav-link fs-4" href="./plantel.html">Plantel</a>
               <a class="nav-link fs-4" href="./productos.html">Productos</a>
