--- a/pages/iniciacion.html
+++ b/pages/iniciacion.html
@@ -3,11 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Racing Club Chivilcoy - Club</title>
-    <link rel="canonical" href="https://www.racingclubchivilcoy.com.ar/pages/club.html">
-    <link rel="shortcut icon" href="../media/img15-khvwTVqnO-transformed_preview_rev_1.png">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <title>Racing Club Chivilcoy - Iniciación al Basquet</title>
+    <link
+      rel="canonical"
+      href="https://www.racingclubchivilcoy.com.ar/pages/iniciacion.html"
+    />
+    <link
+      rel="shortcut icon"
+      href="../media/img15-khvwTVqnO-transformed_preview_rev_1.png"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="../css/estilos.css" />
+    <link rel="stylesheet" href="../css/iniciacion.css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Antonio:wght@100..700&display=swap"
@@ -22,17 +34,31 @@
       <nav id="nav" class="navbar navbar-expand-md p-0 custom-navbar">
         <div class="container-fluid p-0">
           <a class="navbar-brand" href="../index.html">
-            <img src="../media/img16-transformed_preview_rev_1.png" alt="Logo de Racing Basquet" class="ms-2 logoRacing"/>
+            <img
+              src="../media/img16-transformed_preview_rev_1.png"
+              alt="Logo de Racing Basquet"
+              class="ms-2 logoRacing"
+            />
           </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link fs-4" href="../index.html">Inicio</a>
-              <a class="nav-link fs-4 active" href="./club.html">Club</a>
+              <a class="nav-link fs-4" href="./club.html">Club</a>
               <a class="nav-link fs-4" href="./noticias.html">Noticias</a>
-              <a class="nav-link fs-4" href="./iniciacion.html">Iniciación al Basquet</a>
+              <a class="nav-link fs-4 active" href="./pages/iniciacion.html"
+                >Iniciación al Basquet</a
+              >
               <a class="nav-link fs-4" href="./estadios.html">Estadios</a>
               <a class="nav-link fs-4" href="./plantel.html">Plantel</a>
               <a class="nav-link fs-4" href="./productos.html">Productos</a>
@@ -42,95 +68,56 @@
         </div>
       </nav>
     </header>
-    <main class="mainClub">
-      <!-- Contenedor "Separador" -->
-      <div class="contenedorSeparador"></div>
-      <section class="container-fluid d-flex flex-column align-items-center">
-        <h1 class="mb-3 mt-3">Club</h1>
-        <div class="col-12">
-            <div class="">
-                <img src="../media/Plantel/Equipo LN - Camiseta suplente (1) (1).jpg" class="col-12 col-md-6 float-end mb-2 ms-2 mb-md-3 ms-md-3 p-0 imagenClub" alt="...">
-                <p class="parrafoClub">
-                  Un <b>9 de julio de 1914</b>, en la esquina de Maipú y Juramento, nacía Racing Club de Chivilcoy. Un grupo de jóvenes apasionados por Racing de Avellaneda, liderados por <b>Francisco Vachino</b>, dio el puntapié inicial a esta gran historia. Vachino fue el primer presidente, y hasta cedió una habitación de su casa para que ese sueño tomara forma.<br/><br/>
-
-                  Lo que empezó como un deseo compartido se convirtió, con el paso del tiempo, en una <b>institución fundamental para la vida deportiva, social y cultural de Chivilcoy.</b><br/><br/>
-
-                  Primeros pasos<br/>
-                  En 1914, <b>se forma el primer equipo de fútbol</b> y se diseña la camiseta original (roja con rayas verdes).<br/><br/>
-
-                  1915 trae el primer trofeo, aún exhibido con orgullo.<br/><br/>
-
-                  Durante las décadas siguientes, Racing organiza bailes populares, rifas, crea una biblioteca y un seminario deportivo-literario.<br/><br/>
-
-                  A partir de 1931, colabora con la tradicional Doble Chivilcoy, y en 1935 <b>se inaugura la primera cancha de básquet</b> en el predio de calle Alsina.<br/><br/>
-
-                  En 1941, se compra el terreno donde hoy sigue funcionando el club.<br/><br/>
-
-                  Un club con identidad<br/>
-                  Durante las décadas del 40 y 50, <b>Racing se consolida como un espacio que mezcla deporte, cultura y comunidad.</b> Se suman actividades teatrales, carnavales, torneos de baby fútbol y grandes bailes en “El Rancho Grande”.<br/><br/>
-                </p>
-                <p class="parrafoClub">
-                  En 1955, <b>se inaugura la pileta, y a lo largo de los años se destacan logros en básquet, fútbol y hasta en casin.</b><br/><br/>
-
-                  Momentos difíciles, respuestas gigantes<br/>
-                  En 1967, <b>Racing atraviesa una fuerte crisis que desemboca en el remate del club.</b> Pero ahí aparece el corazón racinguista: <b>Julio Cánepa, socio de la institución, lo compra en el acto... y lo dona. Un gesto que salvó al club y marcó para siempre su historia.</b><br/><br/>
-
-                  Crecimiento deportivo y social<br/>
-                  Desde entonces, <b>Racing no paró de crecer.</b><br/><br/>
-
-                  En los 70 y 80, <b>el básquet vive un verdadero boom, con figuras como Ernesto “Tito” Rambozzi y una seguidilla de títulos inolvidables.</b><br/><br/>
-
-                  Se suman artes marciales, natación climatizada y los clásicos corsos que llenaban las calles de color.<br/><br/>
-
-                  En 1986, se inaugura el Estadio Norte, y en 1989, <b>Racing participa por primera vez en la Liga Nacional B.</b><br/><br/>
-
-                  Una institución en movimiento<br/>
-                  A partir de los 90, se incorpora el hockey sobre césped, se construye el gimnasio y se renueva el natatorio.<br/><br/>
-
-                  En 2006, <b>Racing adquiere un campo de deportes, se amplía la infraestructura y se realizan obras clave para modernizar sus instalaciones.</b><br/><br/>
-                </p>
-                <img src="../media/Plantel/Equipo LN - Camiseta titular (2) (1).jpg" class="col-12 col-md-6 float-start mb-2 me-2 mb-md-3 me-md-3 p-0 imagenClub" alt="...">
-                <p class="parrafoClub">
-                  En 2010, <b>un incendio destruye parte del Estadio Norte. Pero como tantas veces, el club se levanta con el apoyo de su gente y sigue adelante.</b><br/><br/>
-
-                  2015–2025: Una década de transformación<br/>
-                  Con <b>Joaquín Oteiza como presidente, Racing vive una etapa marcada por obras concretas, inclusión social y logros deportivos.</b><br/><br/>
-
-                  Obras y mejoras<br/>
-                  <b>Cancha de hockey sintética</b>, finalizada gracias al trabajo conjunto con la subcomisión y apoyo de empresas y vecinos.<br/><br/>
-
-                  Renovación total de la pileta chica y vestuarios nuevos para mejorar la experiencia de socios y deportistas.<br/><br/>
-
-                  Construcción del Salón Azul, pensado como un espacio social, con cocina y depósito incluido.</b><br/><br/>
-
-                  Remodelación total del <b>Estadio Norte, hoy llamado Julio César Nicieza, con nuevo piso flotante, luminarias y accesos renovados.</b><br/><br/>
-
-                  Alianzas y convenios que marcan<br/>
-                  El <b>Grilon Arena, estadio de básquet construido junto a Club Independiente, permitió a Racing competir en la Liga Argentina (segunda categoría del país).</b><br/><br/>
-
-                  En 2023, se firmó un <b>convenio con PAMI, que permitió a más de 300 jubilados realizar actividades en el club.</b><br/><br/>
-                </p>
-                <p class="parrafoClub">
-                  También se firmó una <b>alianza con SportClub Argentina, la cadena de gimnasios más grande de Sudamérica, para ofrecer beneficios únicos a nuestros socios.</b><br/><br/>
-
-                  <b>El gran sueño: Racing en la Liga Nacional
-                  El 7 de junio de 2025, se concretó uno de los hitos más grandes en la historia del club:
-                  el equipo de básquet ascendió a la Liga Nacional, la máxima categoría del país.</b><br/><br/>
-
-                  Este logro fue mucho más que una victoria deportiva. <b>Fue la coronación de años de esfuerzo en inferiores, planificación dirigencial, obras estratégicas y un profundo compromiso con el crecimiento. Fue la confirmación de que Racing está más vivo que nunca.</b><br/>
-
-                  Y llegó justo a tiempo, <b>a un mes de cumplir 111 años, como si el destino mismo hubiera querido regalarle al club y a su gente esa alegría inolvidable.</b><br/><br/>
-
-                  Racing somos todos
-                  Hoy, <b>Racing Club Chivilcoy</b> es un club moderno, abierto, activo y con proyectos de futuro. Pero también es historia, pasión, identidad y comunidad.
-                  Un lugar donde se aprende, se sueña y se crece.
-                  Un lugar donde los valores del deporte son parte de la vida.<br/><br/>
-
-                  <b>Porque en Racing…<br/>
-                  los sueños no se archivan: se trabajan, se sienten y se viven.</b>
-                </p>
-            </div>
-        </div>
+    <main class="d-flex flex-column justify-content-center text-center">
+      <div class="my-2">
+        <h1 class="titulo">Iniciación al Basquet</h1>
+      </div>
+      <section class="sectionIniciales d-flex flex-column justify-content-center align-items-center text-center mt-2">
+        <p class="pIniciales mt-2">
+            El futuro de Racing empieza acá
+        </p>
+        <p class="pIniciales">
+            En Racing Club Chivilcoy el básquet no deja de crecer, y ese crecimiento
+            empieza desde los más chicos. Nuestras categorías formativas y la
+            escuelita de iniciación son el primer paso para que niños y niñas se
+            acerquen al deporte, aprendan, se diviertan y formen parte de la gran
+            familia de la Acade..
+        </p>
+        <p class="pIniciales">
+            Creemos que el deporte es una herramienta fundamental para el desarrollo
+            integral de un niño: fomenta valores como el compañerismo, el respeto,
+            la responsabilidad y el trabajo en equipo, además de generar vínculos y
+            amistades fuera del ámbito escolar.
+        </p>
+        <p class="pIniciales">
+            En Racing, las clases son mixtas, abiertas tanto para niños como para
+            niñas, y están pensadas para acompañar cada etapa de crecimiento,
+            respetando los tiempos y el aprendizaje de cada uno. Las actividades
+            comienzan desde los 4 años, con entrenamientos adaptados y un enfoque
+            formativo que prioriza el juego, la inclusión y el disfrute del básquet.
+        </p>
+        <p class="pIniciales">
+            Los invitamos a ser parte de un club que apuesta al presente y al
+            futuro, donde cada chico y chica encuentra un espacio para crecer,
+            aprender y sentirse parte.
+        </p>
+        <p class="pIniciales">
+            👉 Para más información e inscripciones, podés comunicarte directamente
+            con nuestro coordinador a través de WhatsApp.
+        </p>
+        <div class="text-center col-11 col-sm-8 col-md-6 col-lg-4 col-xl-3 my-4">
+            <label for="nombreAsociar" class="form-label"><h4 class="pIniciales">Inscribite vía <strong id="textoWhtasApp">WhatsApp</strong></h4></label>
+            <input type="text" id="nombreAsociar" class="form-control mx-auto mb-1" placeholder="Ingresá tu nombre">
+            <button id="botonWhatsApp" class="btn btn-lg mt-2">Ir a <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
+              <path d="M13.601 2.326A7.85 7.85 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.9 7.9 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.9 7.9 0 0 0 13.6 2.326zM7.994 14.521a6.6 6.6 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.56 6.56 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592m3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.73.73 0 0 0-.529.247c-.182.198-.691.677-.691 1.654s.71 1.916.81 2.049c.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232"/>
+            </svg> WhatsApp</button>
+          </div>
+      </section>
+      <section class="d-flex flex-row align-items-center">
+        <img class="imagenIniciales" src="../media/iniciales.jpeg" alt="" />
+        <img class="imagenIniciales" src="../media/iniciales1.jpeg" alt="" />
+        <img class="imagenIniciales" src="../media/iniciales2.jpeg" alt="" />
+        <img class="imagenIniciales" src="../media/iniciales3.jpeg" alt="" />
       </section>
     </main>
     <footer>
@@ -256,7 +243,15 @@
           </article>
       </section>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="../js/club.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-firestore-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-storage-compat.js"></script>
+    <script src="../js/iniciacion.js"></script>
+    <script src="../css/estilos.css"></script>
   </body>
 </html>
