--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -33,6 +33,7 @@
               <a class="nav-link fs-4" href="../index.html">Inicio</a>
               <a class="nav-link fs-4" href="./club.html">Club</a>
               <a class="nav-link fs-4 active" href="./noticias.html">Noticias</a>
+              <a class="nav-link fs-4" href="./iniciacion.html">Iniciación al Basquet</a>
               <a class="nav-link fs-4" href="./estadios.html">Estadios</a>
               <a class="nav-link fs-4" href="./plantel.html">Plantel</a>
               <a class="nav-link fs-4" href="./productos.html">Productos</a>
@@ -59,6 +60,7 @@
       </div>
       <section class="container-fluid row align-items-center justify-content-evenly p-0 contenedorNoticias" id="contenedorNoticias">
       </section>
+      <div id="paginacion" class="d-flex justify-content-center gap-2 mt-4"></div>
     </main>
     <footer>
       <!-- FooterLarge -->
